--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
